--- a/src/app/photo-gallery/photo-gallery.component.html
+++ b/src/app/photo-gallery/photo-gallery.component.html
@@ -1,16 +1,22 @@
-<h1 class="red-text">{{title}}</h1>
-<h1 class="blue-text">{{title}}</h1>
-
-<ion-list>
-  <ion-item *ngFor="let image of images">
-    <app-photo-gallery-image [imagePath]="image.imagePath"></app-photo-gallery-image>
-  </ion-item>
-</ion-list>
-<ion-button expand="block">
-  <ion-icon name="camera-outline"></ion-icon>&nbsp;Add Photo
-</ion-button>
-<!-- <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button>
-      <ion-icon name="camera"></ion-icon>
-    </ion-fab-button>
-</ion-fab> -->
+<ion-app>
+  <ion-header>
+  </ion-header>
+  <ion-content>
+    <h1 class="red-text">{{title}}</h1>
+    <h1 class="blue-text">{{title}}</h1>
+    
+    <ion-list>
+      <ion-item *ngFor="let image of images">
+        <app-photo-gallery-image [imagePath]="image.imagePath"></app-photo-gallery-image>
+      </ion-item>
+    </ion-list>
+    <ion-button expand="block">
+      <ion-icon name="camera-outline"></ion-icon>&nbsp;Add Photo
+    </ion-button>
+    <!-- <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+        <ion-fab-button>
+          <ion-icon name="camera"></ion-icon>
+        </ion-fab-button>
+    </ion-fab> -->
+  </ion-content>
+</ion-app>
