--- a/src/app/photo-gallery/photo-gallery.component.html
+++ b/src/app/photo-gallery/photo-gallery.component.html
@@ -3,6 +3,8 @@
   </ion-header>
   <ion-content>
     <h1 class="ion-text-center">{{title}}</h1>
+
+    <app-photo-gallery-image *ngIf="defaultImage" [imagePath]="defaultImage.webPath"></app-photo-gallery-image>
     
     <ion-list>
       <ion-item *ngFor="let image of images">
@@ -11,7 +13,7 @@
     </ion-list>
   </ion-content>
   <ion-footer >
-    <ion-button expand="block">
+    <ion-button expand="block" (click)="takePicture()">
       <ion-icon name="camera-outline"></ion-icon>&nbsp;Add Photo
     </ion-button>
   </ion-footer>
