--- a/src/app/photo-gallery/photo-gallery.component.html
+++ b/src/app/photo-gallery/photo-gallery.component.html
@@ -3,6 +3,7 @@
   </ion-header>
   <ion-content>
     <h1 class="ion-text-center">{{title}}</h1>
+    <ion-button (click)="logStorageData()">Log Storage</ion-button>
     
     <ion-list>
       <ion-item *ngFor="let image of images">
